--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <repositories>
+		<repository>
+			<id>org.jboss.resteasy</id>
+			<name>JBOSS Repository</name>
+			<url>http://repository.jboss.org/maven2/</url>
+		</repository>
         <repository>
             <id>oss.sonatype.org</id>
             <name>OrientDB Maven2 Repository</name>
@@ -70,48 +75,76 @@
     </build>
 
     <dependencies>
-        <dependency>
-            <groupId>com.orientechnologies</groupId>
-            <artifactId>orientdb-server</artifactId>
-            <version>1.6</version>
-            <scope>provided</scope>
-        </dependency>
+	    <dependency>
+	        <groupId>org.jboss.resteasy</groupId>
+	        <artifactId>resteasy-jaxrs</artifactId>
+	        <version>3.0.5.Final</version>
+	    </dependency>
+	    
+	    <dependency>
+	        <groupId>org.jboss.resteasy</groupId>
+	        <artifactId>resteasy-jaxb-provider</artifactId>
+	        <version>3.0.5.Final</version>
+	    </dependency>
+	    
+	    <dependency>
+	        <groupId>org.jboss.resteasy</groupId>
+	        <artifactId>resteasy-jettison-provider</artifactId>
+	        <version>3.0.5.Final</version>
+	    </dependency>
 
-        <dependency>
-            <groupId>com.orientechnologies</groupId>
-            <artifactId>orientdb-graphdb</artifactId>
-            <version>1.6</version>
-            <scope>provided</scope>
-        </dependency>
+		<dependency>
+		    <groupId>com.orientechnologies</groupId>
+		    <artifactId>orientdb-server</artifactId>
+		    <version>1.6</version>
+		    <scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.orientechnologies</groupId>
+		    <artifactId>orientdb-graphdb</artifactId>
+		    <version>1.6</version>
+		    <scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.tinkerpop</groupId>
+		    <artifactId>frames</artifactId>
+		    <version>2.5.0-SNAPSHOT</version>
+		    <exclusions>
+		        <exclusion>
+		            <artifactId>blueprints-core</artifactId>
+		            <groupId>com.tinkerpop.blueprints</groupId>
+		        </exclusion>
+		        <exclusion>
+		            <artifactId>gremlin-groovy</artifactId>
+		            <groupId>com.tinkerpop.gremlin</groupId>
+		        </exclusion>
+		    </exclusions>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.codehaus.jackson</groupId>
+		    <artifactId>jackson-mapper-asl</artifactId>
+		    <version>1.9.13</version>
+		</dependency>
 
-        <dependency>
-            <groupId>com.tinkerpop</groupId>
-            <artifactId>frames</artifactId>
-            <version>2.5.0-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>blueprints-core</artifactId>
-                    <groupId>com.tinkerpop.blueprints</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>gremlin-groovy</artifactId>
-                    <groupId>com.tinkerpop.gremlin</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.13</version>
-        </dependency>
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>javax.servlet.jsp-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
 
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>5.14.1</version>
-            <scope>test</scope>
-        </dependency>
-
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+		</dependency>
     </dependencies>
 </project>
