--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,18 @@
     </repositories>
 
     <dependencies>
+    <dependency>
+   		 <groupId>org.apache.commons</groupId>
+  		<artifactId>commons-lang3</artifactId>
+  		<version>3.1</version>
+    </dependency>
+    
+    <dependency>
+    	<groupId>com.google.guava</groupId>
+    	<artifactId>guava</artifactId>
+    	<version>15.0</version>
+	</dependency>
+	
         <dependency>
         	<groupId>com.orientechnologies</groupId>
         	<artifactId>orient-commons</artifactId>
