--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,14 +7,6 @@
 
     <display-name>NDEx RESTful API</display-name>
 
-<!--
-	<listener>
-		<listener-class>
-			org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap
-		</listener-class>
-	</listener>
--->
-		
     <servlet>
         <servlet-name>Resteasy</servlet-name>
         <servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
@@ -38,4 +30,14 @@
         <param-name>resteasy.servlet.mapping.prefix</param-name>
         <param-value>/</param-value>
     </context-param>
+
+	<filter>
+		<filter-name>CrossOriginResourceSharingFilter</filter-name>
+		<filter-class>org.ndexbio.rest.filters.CrossOriginResourceSharingFilter</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>CrossOriginResourceSharingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
