additional changed to support create network and fix issues

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
         	<artifactId>resteasy-jackson2-provider</artifactId>
         	<version>3.0.5.Final</version>
         </dependency>
+        
+        <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.5.2</version>
+    </dependency>
 
         <dependency>
             <groupId>junit</groupId>
