Demonstration that parser apps can run.

--- a/pom.xml
+++ b/pom.xml
@@ -155,12 +155,20 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.3.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.0.13</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<version>3.0</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 
