--- a/src/main/webapp/WEB-INF/classes/ndex.properties
+++ b/src/main/webapp/WEB-INF/classes/ndex.properties
@@ -3,6 +3,7 @@ OrientDB-Username=admin
 OrientDB-Password=admin
 OrientDB-Admin-Username=ndex
 OrientDB-Admin-Password=ndex
+OrientDB-Use-Transactions=true
 Feedback-Email=support@ndexbio.org
 Forgot-Password-Email=support@ndexbio.org
 Forgot-Password-File=/opt/ndex/config/forgot-password.txt
