--- a/pom.xml
+++ b/pom.xml
@@ -39,35 +39,104 @@
 		<dependency>
 			<groupId>com.orientechnologies</groupId>
 			<artifactId>orient-commons</artifactId>
-			<version>1.6</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.orientechnologies</groupId>
-			<artifactId>orientdb-graphdb</artifactId>
-			<version>1.6</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.orientechnologies</groupId>
-			<artifactId>orientdb-server</artifactId>
-			<version>1.6</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.tinkerpop</groupId>
-			<artifactId>frames</artifactId>
-			<version>2.5.0-SNAPSHOT</version>
-			<exclusions>
+			<version>1.6.6</version>
+				 <exclusions>
 				<exclusion>
 					<artifactId>blueprints-core</artifactId>
+					<groupId>com.tinkerpop.blueprints</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>blueprints-orient-graph</artifactId>
 					<groupId>com.tinkerpop.blueprints</groupId>
 				</exclusion>
 				<exclusion>
 					<artifactId>gremlin-groovy</artifactId>
 					<groupId>com.tinkerpop.gremlin</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>gremlin-java</artifactId>
+					<groupId>com.tinkerpop.gremlin</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>pipes</artifactId>
+					<groupId>com.tinkerpop</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>blueprints-test</artifactId>
+					<groupId>com.tinkerpop.blueprints</groupId>
+				</exclusion>
 			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>com.orientechnologies</groupId>
+			<artifactId>orientdb-graphdb</artifactId>
+			<version>1.6.6</version>
+			 <exclusions>
+				<exclusion>
+					<artifactId>blueprints-core</artifactId>
+					<groupId>com.tinkerpop.blueprints</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>blueprints-orient-graph</artifactId>
+					<groupId>com.tinkerpop.blueprints</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>gremlin-groovy</artifactId>
+					<groupId>com.tinkerpop.gremlin</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>gremlin-java</artifactId>
+					<groupId>com.tinkerpop.gremlin</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>pipes</artifactId>
+					<groupId>com.tinkerpop</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>blueprints-test</artifactId>
+					<groupId>com.tinkerpop.blueprints</groupId>
+				</exclusion>
+			</exclusions>
+			
+		</dependency>
+
+		<dependency>
+			<groupId>com.orientechnologies</groupId>
+			<artifactId>orientdb-server</artifactId>
+			<version>1.6.6</version>
+				 <exclusions>
+				<exclusion>
+					<artifactId>blueprints-core</artifactId>
+					<groupId>com.tinkerpop.blueprints</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>blueprints-orient-graph</artifactId>
+					<groupId>com.tinkerpop.blueprints</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>gremlin-groovy</artifactId>
+					<groupId>com.tinkerpop.gremlin</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>gremlin-java</artifactId>
+					<groupId>com.tinkerpop.gremlin</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>pipes</artifactId>
+					<groupId>com.tinkerpop</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>blueprints-test</artifactId>
+					<groupId>com.tinkerpop.blueprints</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>com.tinkerpop</groupId>
+			<artifactId>frames</artifactId>
+			<version>2.5.0</version>
 		</dependency>
 
 		<dependency>
@@ -106,30 +175,11 @@
 			<artifactId>resteasy-multipart-provider</artifactId>
 			<version>3.0.5.Final</version>
 		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.5</version>
-		</dependency>
-
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
-		</dependency>
-
-
-		<dependency>
-			<groupId>org.codehaus.groovy</groupId>
-			<artifactId>groovy-eclipse-batch</artifactId>
-			<version>2.1.8-01</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.codehaus.groovy</groupId>
-			<artifactId>groovy-eclipse-compiler</artifactId>
-			<version>2.8.0-01</version>
 		</dependency>
 
 		<dependency>
@@ -184,19 +234,7 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
-
-
-			<plugin>
-				<groupId>org.codehaus.groovy</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<!-- 2.8.0-01 and later require maven-compiler-plugin 3.1 or higher -->
-				<version>3.1</version>
-				<configuration>
-					<compilerId>groovy-eclipse-compiler</compilerId>
-					<!-- set verbose to be true if you want lots of uninteresting messages -->
-					<!-- <verbose>true</verbose> -->
-				</configuration>
-			</plugin>
+	
 		</plugins>
 	</build>
 </project>
