--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,7 @@
         <param-value>/</param-value>
     </context-param>
 
-	<filter>
+	<!--<filter>
 		<filter-name>CrossOriginResourceSharingFilter</filter-name>
 		<filter-class>org.ndexbio.rest.filters.CrossOriginResourceSharingFilter</filter-class>
 	</filter>
@@ -39,5 +39,5 @@
 	<filter-mapping>
 		<filter-name>CrossOriginResourceSharingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	</filter-mapping> -->
 </web-app>
