--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,36 @@
 
 
 	<build>
+	<pluginManagement>
+<plugins>
+    <!-- Ignore/Execute plugin execution -->
+    <plugin>
+        <groupId>org.eclipse.m2e</groupId>
+        <artifactId>lifecycle-mapping</artifactId>
+        <version>1.0.0</version>
+        <configuration>
+            <lifecycleMappingMetadata>
+                <pluginExecutions>
+                    <!-- copy-dependency plugin -->
+                    <pluginExecution>
+                        <pluginExecutionFilter>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-dependency-plugin</artifactId>
+                            <versionRange>[1.0.0,)</versionRange>
+                            <goals>
+                                <goal>copy-dependencies</goal>
+                            </goals>
+                        </pluginExecutionFilter>
+                        <action>
+                            <ignore />
+                        </action>
+                    </pluginExecution>
+                </pluginExecutions>
+            </lifecycleMappingMetadata>
+        </configuration>
+    </plugin>
+   </plugins></pluginManagement>
+		<finalName>ndexbio-rest</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -113,21 +143,68 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
-			 <plugin>
-      <artifactId>maven-assembly-plugin</artifactId>
-      <configuration>
-        <archive>
-          <manifest>
-            <mainClass>org.ndexbio.rest.server.StandaloneServer</mainClass>
-          </manifest>
-        </archive>
-        <descriptorRefs>
-          <descriptorRef>jar-with-dependencies</descriptorRef>
-        </descriptorRefs>
-        <finalName>ndexbio-rest</finalName>
-        <appendAssemblyId>false</appendAssemblyId>
-      </configuration>
-    </plugin>
+			    <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+                <execution>
+                    <id>copy-dependencies</id>
+                    <phase>prepare-package</phase>
+                    <goals>
+                        <goal>copy-dependencies</goal>
+                    </goals>
+                    <configuration>
+                        <outputDirectory>/tmp/lib</outputDirectory>
+                        <overWriteReleases>false</overWriteReleases>
+                        <overWriteSnapshots>false</overWriteSnapshots>
+                        <overWriteIfNewer>true</overWriteIfNewer>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <addClasspath>true</addClasspath>
+                        <classpathPrefix>lib/</classpathPrefix>
+                        <mainClass>org.ndexbio.rest.server.StandaloneServer</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+<!-- 			 <plugin>
+      			<artifactId>maven-assembly-plugin</artifactId>
+      			<configuration>
+        			<archive>
+          				<manifest>
+            				<mainClass>org.ndexbio.rest.server.StandaloneServer</mainClass>
+          				</manifest>
+        			</archive>
+        			<descriptorRefs>
+          				<descriptorRef>jar-with-dependencies</descriptorRef>
+        			</descriptorRefs>
+        			<finalName>ndexbio-rest</finalName>
+        			<appendAssemblyId>false</appendAssemblyId>
+      			</configuration>
+      			<executions>
+    				<execution>
+      					<id>make-assembly</id> 
+      					<phase>package</phase> 
+      					<goals>
+        					<goal>single</goal>
+      					</goals>
+    				</execution>
+  				</executions>
+    		</plugin>  -->
+    		<plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.2.2-SNAPSHOT</version>
+            </plugin>
+    
 		</plugins>
 	</build>
 	<properties>
