added services functions to process tasks and back db, so that we can convert the system to use plocal connection in Orientdb.

--- a/pom.xml
+++ b/pom.xml
@@ -87,17 +87,24 @@
       <version>9.2.2.v20140723</version>
     </dependency>
 
-<dependency>
-    <groupId>org.eclipse.jetty</groupId>
-    <artifactId>jetty-servlets</artifactId>
-    <version>9.2.2.v20140723</version>
-</dependency>
-
+	<dependency>
+    	<groupId>org.eclipse.jetty</groupId>
+    	<artifactId>jetty-servlets</artifactId>
+    	<version>9.2.2.v20140723</version>
+	</dependency>
+<!-- 
 		<dependency>
 			<groupId>org.ndexbio</groupId>
 			<artifactId>ndex-common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+ -->
+		<dependency>
+			<groupId>org.ndexbio</groupId>
+			<artifactId>ndex-task</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 	</dependencies>
 
 
