Move configuration from common to task.

--- a/src/main/resources/ndex.properties
+++ b/src/main/resources/ndex.properties
@@ -1,4 +1,5 @@
 OrientDB-URL=remote:localhost/ndex
+#OrientDB-URL=plocal:/opt/ndex/orientdb/databases/ndex/ndex
 OrientDB-Username=admin
 OrientDB-Password=admin
 OrientDB-Admin-Username=ndex
