--- a/src/main/webapp/WEB-INF/classes/ndex.properties
+++ b/src/main/webapp/WEB-INF/classes/ndex.properties
@@ -19,3 +19,4 @@ SMTP-Port=587
 SMTP-Username=support@ndexbio.org
 SMTP-Password=ZrdF!nP8
 Uploaded-Networks-Path=/opt/ndex/uploaded-networks/
+HostURI=http://www.ndexbio.org
