--- a/pom.xml
+++ b/pom.xml
@@ -42,25 +42,25 @@
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
-			<version>3.0.9.Final</version>
+			<version>${resteasyVersion}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxb-provider</artifactId>
-			<version>3.0.9.Final</version>
+			<version>${resteasyVersion}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jackson2-provider</artifactId>
-			<version>3.0.9.Final</version>
+			<version>${resteasyVersion}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-multipart-provider</artifactId>
-			<version>3.0.9.Final</version>
+			<version>${resteasyVersion}</version>
 		</dependency>
 		
 		<dependency>
@@ -78,19 +78,19 @@
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
-      <version>9.2.5.v20141112</version>
+      <version>${jettyVersion}</version>
     </dependency>
 
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-servlet</artifactId>
-      <version>9.2.5.v20141112</version>
+      <version>${jettyVersion}</version>
     </dependency>
 
 	<dependency>
     	<groupId>org.eclipse.jetty</groupId>
     	<artifactId>jetty-servlets</artifactId>
-    	<version>9.2.5.v20141112</version>
+    	<version>${jettyVersion}</version>
 	</dependency>
 <!-- 	
 	<dependency>
@@ -98,12 +98,13 @@
 		<artifactId>opensaml</artifactId>
 		<version>2.6.1</version>
 	</dependency>
- -->	
-		<dependency>
+-->	
+ 		<dependency>
 			<groupId>org.ndexbio</groupId>
-			<artifactId>ndex-task</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<artifactId>ndex-common</artifactId>
+			<version>1.2-SNAPSHOT</version>
 		</dependency>
+	
 
 	</dependencies>
 
@@ -215,6 +216,7 @@
 		</plugins>
 	</build>
 	<properties>
-		<jettyVersion>9.2.5.v20141112</jettyVersion>
+		<jettyVersion>9.2.7.v20150116</jettyVersion>
+		<resteasyVersion>3.0.9.Final</resteasyVersion>
 	</properties>
 </project>
