--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,15 @@
                     </manifest>
                 </archive>
             </configuration>
+            <executions>
+             <execution>
+				<id>make-a-jar</id>
+<phase>package</phase>
+<goals>
+<goal>jar</goal>
+</goals>
+</execution>
+</executions>
         </plugin>
 <!-- 			 <plugin>
       			<artifactId>maven-assembly-plugin</artifactId>
