--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,7 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
+            <version>2.6</version>
             <configuration>
                 <archive>
                     <manifest>
@@ -267,6 +268,7 @@
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
+               <version>2.5.2</version>
                <executions>
                    <execution>
                        <phase>install</phase>
