--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
 			<artifactId>resteasy-multipart-provider</artifactId>
 			<version>${resteasyVersion}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -242,7 +242,42 @@
       					</goals>
     				</execution>
   				</executions>
-    		</plugin>  -->
+    		</plugin> -->
+    		
+    		<!--  
+    		the plugin below can be used if we build executable standalone JettyServer 
+
+    		<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <finalName>shaded-jar</finalName>
+                    <transformers>
+                        <transformer
+                            implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                            <resource>META-INF/services/com.orientechnologies.orient.core.sql.functions.OSQLFunctionFactory</resource>
+                        </transformer>
+                        <transformer
+                            implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                            <resource>META-INF/services/com.orientechnologies.orient.core.sql.OCommandExecutorSQLFactory</resource>
+                        </transformer>
+                        <transformer   implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                            <mainClass>mapegy.orientdbcsv.OrientDBMain</mainClass>
+                        </transformer>
+                    </transformers>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            -->
+            
     		<plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
@@ -264,7 +299,7 @@
            
               <!-- the "maven-install-plugin" copies the  "ndexbio-rest-{project.artifactId}-${project.version}.jar" file from
                    ~/git/ndex-rest/target/ndexbio-rest/WEB-INF/lib to ~/.m2/repository/org/ndexbio/ndexbio-rest/{project.artifactId}-${project.version}. 
-                -->          
+                -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
