--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>org.ndexbio</groupId>
 	<artifactId>ndexbio-rest</artifactId>
 	<packaging>war</packaging>
-	<version>2.0-SNAPSHOT</version>
+	<version>2.2-SNAPSHOT</version>
 	<name>ndexbio-rest</name>
 	<url>http://maven.apache.org</url>
 	<inceptionYear>2013</inceptionYear>
@@ -146,10 +146,33 @@
             <version>1.22.0</version>
         </dependency>
 		
+		
+		  <dependency>
+      <groupId>org.apache.maven.scm</groupId>
+      <artifactId>maven-scm-provider-gitexe</artifactId>
+      <version>1.8.1</version>
+    </dependency>
+   <dependency>
+    <groupId>org.apache.maven.scm</groupId>
+    <artifactId>maven-scm-provider-git-commons</artifactId>
+    <version>1.8.1</version>
+   </dependency>       
+   
+   <dependency>
+  <groupId>com.jcabi</groupId>
+  <artifactId>jcabi-manifests</artifactId>
+  <version>1.1</version>
+</dependency>
+   
 	</dependencies>
+ 
+ <scm>
 
+	  <connection>scm:git:https://github.com/ndexbio/ndex-rest.git</connection>
 
-
+	 </scm>
+	  
+ 
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -221,37 +244,25 @@
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>lib/</classpathPrefix>
 							<mainClass>org.ndexbio.rest.server.StandaloneServer</mainClass>
+			              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 						</manifest>
+            <manifestEntries>
+               <NDEx-Version>${project.version}</NDEx-Version>
+	       	   <NDEx-Build>${buildNumber}</NDEx-Build>
+            </manifestEntries>
 					</archive>
 				</configuration>
 				<executions>
 					<execution>
 						<id>make-a-jar</id>
-						<phase>package</phase>
+						<phase>pac	kage</phase>
 						<goals>
 							<goal>jar</goal>
 						</goals>
 					</execution>
 				</executions>
 			</plugin>
-			<!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <configuration> 
-				<archive> <manifest> <mainClass>org.ndexbio.rest.server.StandaloneServer</mainClass> 
-				</manifest> </archive> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> 
-				</descriptorRefs> <finalName>ndexbio-rest</finalName> <appendAssemblyId>false</appendAssemblyId> 
-				</configuration> <executions> <execution> <id>make-assembly</id> <phase>package</phase> 
-				<goals> <goal>single</goal> </goals> </execution> </executions> </plugin> -->
 
-			<!-- the plugin below can be used if we build executable standalone JettyServer 
-				<plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-shade-plugin</artifactId> 
-				<version>2.3</version> <configuration> <finalName>shaded-jar</finalName> 
-				<transformers> <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer"> 
-				<resource>META-INF/services/com.orientechnologies.orient.core.sql.functions.OSQLFunctionFactory</resource> 
-				</transformer> <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer"> 
-				<resource>META-INF/services/com.orientechnologies.orient.core.sql.OCommandExecutorSQLFactory</resource> 
-				</transformer> <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"> 
-				<mainClass>mapegy.orientdbcsv.OrientDBMain</mainClass> </transformer> </transformers> 
-				</configuration> <executions> <execution> <phase>package</phase> <goals> 
-				<goal>shade</goal> </goals> </execution> </executions> </plugin> -->
 
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
@@ -267,10 +278,67 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
+				       <shortRevisionLength>5</shortRevisionLength>
 					<archiveClasses>true</archiveClasses>
+					 <archive>
+            <manifest>
+              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+            </manifest>
+            <manifestEntries>
+               <NDEx-Version>${project.version}</NDEx-Version>
+	       	   <NDEx-Build>${buildNumber}</NDEx-Build>
+            </manifestEntries>
+          </archive>
 				</configuration>
 			</plugin>
-
+     <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>buildnumber-maven-plugin</artifactId>
+        <version>1.3</version>
+        <executions>
+          <execution>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>create</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+        <revisiononscmfailure>
+	     <!--
+	      Generate sequence build number based on:
+	      build number and timestamp     
+	     -->
+	     <format>Build: #{0} ({1,date})</format>
+	     <items>
+	      <item>buildNumber\d*</item>
+	      <item>timestamp</item>
+	     </items>
+	    </revisiononscmfailure>
+                
+          <doCheck>false</doCheck>
+          <doUpdate>false</doUpdate>
+        </configuration>
+      </plugin>
+      
+      <plugin>
+    <groupId>io.github.michaldo</groupId>
+    <artifactId>nashorn-maven-plugin</artifactId>
+    <version>0.0.1</version>
+    <executions>
+        <execution>
+            <phase>validate</phase>
+            <goals>
+                <goal>eval</goal>
+            </goals>
+            <configuration>
+                <script>
+                    $project.artifact.version = "${buildNumber}";
+                </script>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
 			<!-- the "maven-install-plugin" copies the "ndexbio-rest-{project.artifactId}-${project.version}.jar" 
 				file from ~/git/ndex-rest/target/ndexbio-rest/WEB-INF/lib to ~/.m2/repository/org/ndexbio/ndexbio-rest/{project.artifactId}-${project.version}. -->
 			<plugin>
