--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>org.ndexbio</groupId>
 	<artifactId>ndexbio-rest</artifactId>
 	<packaging>war</packaging>
-	<version>2.4.1</version>
+	<version>2.4.2</version>
 	<name>ndexbio-rest</name>
 	<url>http://maven.apache.org</url>
 	<inceptionYear>2013</inceptionYear>
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>org.ndexbio</groupId>
 			<artifactId>ndex-object-model</artifactId>
-			<version>2.4.1</version>
+			<version>2.4.2</version>
 		</dependency>
 
 		<dependency>
@@ -32,12 +32,6 @@
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.1.1</version>
 		</dependency>
-
-	<!-- 	<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.8.1</version>
-		</dependency> -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
@@ -383,6 +377,7 @@
 		<jettyVersion>9.3.18.v20170406</jettyVersion>
 		<resteasyVersion>3.1.4.Final</resteasyVersion>
 		<log4jVersion>2.8.2</log4jVersion>
-		<jacksonVersion>2.9.4</jacksonVersion>
+		<jacksonVersion>2.9.9</jacksonVersion>
+	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 </project>
