--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>org.ndexbio</groupId>
 			<artifactId>ndex-object-model</artifactId>
-			<version>2.5.2</version>
+			<version>2.5.3-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
