--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.3.3</version>
+			<version>42.3.8</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -124,6 +124,11 @@
 			<artifactId>solr-solrj</artifactId>
 			<version>8.1.1</version>
 		</dependency>
+        <dependency>
+          <groupId>com.auth0</groupId>
+          <artifactId>java-jwt</artifactId>
+          <version>4.2.2</version>
+       </dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.uuid</groupId>
