Fixed missing method issue in pom file.

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
 			<version>${jacksonVersion}</version>
 		</dependency>
 		<dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-core</artifactId>
+    		<version>${jacksonVersion}</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>com.fasterxml.jackson.jaxrs</groupId>
 			<artifactId>jackson-jaxrs-json-provider</artifactId>
 			<version>${jacksonVersion}</version>
