added nrnb nexus as repository so mvn install can find needed ndex jars

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,28 @@
 	<url>http://maven.apache.org</url>
 	<inceptionYear>2013</inceptionYear>
 	<repositories>
-
+		<repository>
+			<id>cytoscape_snapshots</id>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<name>Cytoscape Snapshots</name>
+			<url>https://nrnb-nexus.ucsd.edu/repository/cytoscape_snapshots/</url>
+		</repository>
+		<repository>
+			<id>cytoscape_releases</id>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<name>Cytoscape Releases</name>
+			<url>https://nrnb-nexus.ucsd.edu/repository/cytoscape_releases/</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
