added resteasy-servlet-initializer as needed now for third party servlet containers like tomcat, jetty

--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
             <version>${resteasyVersion}</version>
         </dependency>
   -->    
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-servlet-initializer</artifactId>
+            <version>${resteasyVersion}</version>
+        </dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-client</artifactId>
